fseinventory/css/header.css
#header_main
{
	/*display: flex;*/
	/*width: 100%;*/
	/*justify-content: center;*/
    /*border-bottom: 1px solid #009933;*/
}
#logo_container
{
	display: flex;
	order: 1;
	padding-bottom: 20px;
}
#nav_main 
{
	display: flex;
	order: 2;
	margin: auto 0;
	/*flex-grow: 2;*/
	/*padding-top: 22px;*/
}
#nav_main ul
{
	list-style: none;
	display: flex;
}
#nav_main ul li a
{
	/*padding: 5px 7.5px;*/
	padding: 30px;
	transition: .15s;
}
#nav_main ul li a:hover:not(.divider)
{
	background-color: #009933;
	color: white;
}
#nav_main ul li a:not(.divider)
{
	text-decoration: none;
	cursor: pointer;
	/*transition: .25s;*/
}
#nav_main ul li a:hover 
{
	/*background-color: #009933;
	color: white;*/
}
.user_tools
{
	display: flex;
	order: 3;
	margin: auto 0 auto 50px;
	padding: 15px 30px;
	background-color: lightgrey;
	box-shadow: 1px 1px 8px -2px grey;
}
.user_tools ul
{
	list-style: none;
	display: flex;
	padding-left: 0;
}
.user_tools ul li a
{
	padding: 25px 15px 22px 15px;
	transition: .15s;
	clip-path: polygon(0 100%, 0 0, 23% 0, 26% 1%, 28% 4%, 30% 8%, 100% 8%, 100% 100%);
	text-decoration: none;
	color: #595856;
}
.user_tools ul li a:hover 
{
	background-color: #FFD400;
	color: black;
}

/* NEW BOOTSTRAP NAV */
.navbar {
	background-color: white;
	border-bottom: 1px solid #009933;
}
.navbar-nav li {
	font-weight: bold;
}

